[package]
name = "workspace"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
panic = 'abort'
overflow-checks = true

[profile.test]
opt-level = 3

# ---------------------------------------------------------------------
[[bin]]
name = "task_a"
path = "src/a.rs"

[[bin]]
name = "task_b"
path = "src/b.rs"

[[bin]]
name = "task_c"
path = "src/c.rs"

[[bin]]
name = "task_d"
path = "src/d.rs"

[[bin]]
name = "task_e"
path = "src/e.rs"

[[bin]]
name = "task_f"
path = "src/f.rs"

[[bin]]
name = "task_g"
path = "src/g.rs"

[[bin]]
name = "task_h"
path = "src/h.rs"