[package]
name = "workspace"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
panic = 'abort'
overflow-checks = true

[profile.test]
opt-level = 3

# ---------------------------------------------------------------------
[[bin]]
name = "task_a"
path = "src/a/main.rs"

[[bin]]
name = "task_b"
path = "src/b/main.rs"

[[bin]]
name = "task_c"
path = "src/c/main.rs"

[[bin]]
name = "task_d"
path = "src/d/main.rs"

[[bin]]
name = "task_e"
path = "src/e/main.rs"

[[bin]]
name = "task_f"
path = "src/f/main.rs"

[[bin]]
name = "task_g"
path = "src/g/main.rs"

[[bin]]
name = "task_h"
path = "src/h/main.rs"